--- a/index.html
+++ b/index.html
@@ -29,7 +29,10 @@
                   <a href="#home" class="text-base text-slate-900 group-hover:text-teal-500 py-2 mx-8 flex transition duration-300">Beranda</a>
                 </li>
                 <li class="group">
-                  <a href="#about" class="text-base text-slate-900 group-hover:text-teal-500 py-2 mx-8 flex transition duration-300">Tentang</a>
+                  <a href="#about" class="text-base text-slate-900 group-hover:text-teal-500 py-2 mx-8 flex transition duration-300">Tentang Saya</a>
+                </li>
+                <li class="group">
+                  <a href="#portofolio" class="text-base text-slate-900 group-hover:text-teal-500 py-2 mx-8 flex transition duration-300">Portofolio</a>
                 </li>
               </ul>
             </nav>
@@ -45,9 +48,9 @@
         <div class="flex flex-wrap lg:flex-nowrap">
           <div class="w-full self-center px-4 lg:w-1/2 flex justify-center">
             <div class="w-full max-w-md text-center lg:text-end">
-              <h1 class="text-base font-semibold text-robin md:text-xl lg:text-3xl uppercase">
+              <h1 class="text-2xl font-semibold text-robin md:text-3xl lg:text-4xl uppercase">
                 i am
-                <span class="block mt-1 font-bold font-[Poppins] text-gunmetal uppercase text-4xl lg:text-5xl">Mohammad Ghazy</span>
+                <span class="block mt-1 font-bold font-[Poppins] text-gunmetal uppercase text-4xl lg:text-6xl">Mohammad Ghazy</span>
               </h1>
               <h2 class="font-medium text-lg mb-5 mt-1 text-slate-500 lg:text-xl">
                  A Web Developer<span class="text-slate-800 font-medium"> & </span>Student
@@ -74,7 +77,7 @@
    <!-- Hero Section End -->
 
    <!-- About Section Start -->
-    <section id="about" class="pt-36 pb-32">
+    <section id="about" class="pt-36 mb-20">
       <div class="w-full px-4 mx-auto">
         <h4 class="font-bold text-3xl px-4 uppercase text-teal-500 mb-3 md:text-center lg:text-4xl lg:mb-9">Tentang Saya</h4>
         <div class="flex flex-wrap">
@@ -106,7 +109,7 @@
               <div class="bg-teal-500 h-2.5 rounded-full" style="width: 20%"></div>
             </div>
           </div>
-          <div class="flex items-center justify-center mx-auto pt-2">
+          <div class="flex items-center justify-center mx-auto mt-10 md:mt-0 lg:mt-0 xl:mt-0">
             <a href="https://instagram.com/mohghazy_" target="_blank" class="mr-4 w-9 h-9 rounded-full flex items-center border border-slate-500 text-slate-500 justify-center hover:border-rose-700 hover:text-white hover:bg-rose-500 transition duration-300 ease-in-out">
               <svg class="fill-current" role="img" width="20" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
                 <title>Instagram</title>
@@ -129,9 +132,9 @@
       <div class="container mx-auto">
         <div class="w-full px-4">
           <div class="max-w-xl mx-auto text-center mb-16">
-            <h4 class="font-semibold mb-2 text-lg text-teal-500">Portofolio</h4>
+            <h4 class="font-semibold mb-2 text-2xl text-teal-500 lg:text-4xl">Portofolio</h4>
             <h2 class="font-bold text-slate-900 text-3xl mb-4 sm:text-4xl  lg:text-5xl">Project terbaru</h2>
-            <p class="font-medium text-md text-slate-500 md:text-lg">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Rerum aspernatur dicta tempora dolorem quod ducimus corrupti libero molestias sequi assumenda?</p>
+            <!-- <p class="font-medium text-md text-slate-500 md:text-lg">Project lintas dunia</p> -->
           </div>
         </div>
         <div class="w-full px-4 flex flex-wrap justify-center xl:w-10/12 xl:mx-auto">
@@ -139,29 +142,8 @@
             <div class="rounded-md shadow-md overflow-hidden">
               <img src="dist/image/portfolio/blog-frecationer.png" alt="Blog Frecationer" class="w-full">
             </div>
-            <h3 class="font-semibold text-xl text-slate-900 mt-5 mb-3">Blog Frecationer</h3>
-            <p class="font-medium text-base text-slate-500">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sit modi quae, atque tempore neque maxime quaerat temporibus deserunt veritatis assumenda!</p>
-          </div>
-          <div class="w-full px-4 md:w-1/2">
-            <div class="rounded-md shadow-md overflow-hidden">
-              <img src="dist/image/portfolio/blog-frecationer.png" alt="Blog Frecationer" class="w-full">
-            </div>
-            <h3 class="font-semibold text-xl text-slate-900 mt-5 mb-3">Blog Frecationer</h3>
-            <p class="font-medium text-base text-slate-500">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sit modi quae, atque tempore neque maxime quaerat temporibus deserunt veritatis assumenda!</p>
-          </div>
-          <div class="w-full px-4 md:w-1/2">
-            <div class="rounded-md shadow-md overflow-hidden">
-              <img src="dist/image/portfolio/blog-frecationer.png" alt="Blog Frecationer" class="w-full">
-            </div>
-            <h3 class="font-semibold text-xl text-slate-900 mt-5 mb-3">Blog Frecationer</h3>
-            <p class="font-medium text-base text-slate-500">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sit modi quae, atque tempore neque maxime quaerat temporibus deserunt veritatis assumenda!</p>
-          </div>
-          <div class="w-full px-4 md:w-1/2">
-            <div class="rounded-md shadow-md overflow-hidden">
-              <img src="dist/image/portfolio/blog-frecationer.png" alt="Blog Frecationer" class="w-full">
-            </div>
-            <h3 class="font-semibold text-xl text-slate-900 mt-5 mb-3">Blog Frecationer</h3>
-            <p class="font-medium text-base text-slate-500">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sit modi quae, atque tempore neque maxime quaerat temporibus deserunt veritatis assumenda!</p>
+            <a href="https://frecationer.com" class="hover:opacity-80"><h3 class="font-semibold text-xl text-slate-900 mt-5 mb-3">Blog Frecationer</h3></a>
+            <p class="font-medium text-base text-slate-500">Saya mengembangkan tampilan frontend-nya. Proyek ini dibangun dengan HTML, CSS, dan Tailwind CSS, fokus pada tampilan yang responsif dan fungsional.</p>
           </div>
         </div>
       </div>
@@ -169,7 +151,7 @@
    <!-- Portofolio Section End -->
 
    <!-- Clients Section Start -->
-    <section id="clients" class="pt-36 pb-32 bg-slate-800">
+    <!-- <section id="clients" class="pt-36 pb-32 bg-slate-800">
       <div class="w-full px-4">
           <div class="mx-auto text-center mb-16">
             <h4 class="font-semibold mb-2 text-lg text-teal-500">Client</h4>
@@ -187,11 +169,11 @@
             </div>
           </div>
         </div>
-    </section>
+    </section> -->
    <!-- Clients Section End -->
 
    <!-- Blog Section Start -->
-    <section id="blog" class="pt-36 pb-32 bg-slate-100">
+    <!-- <section id="blog" class="pt-36 pb-32 bg-slate-100">
       <div class="container mx-auto">
         <div class="w-full px-4">
           <div class="max-w-xl mx-auto text-center mb-16">
@@ -240,11 +222,11 @@
           </div>
         </div>
       </div>
-    </section>
+    </section> -->
    <!-- Blog Section End -->
 
    <!-- Contact Section Start -->
-    <section id="contact" class="pt-36 pb-32">
+    <!-- <section id="contact" class="pt-36 pb-32">
       <div class="container mx-auto">
         <div class="w-full px-4">
           <div class="max-w-xl mx-auto text-center mb-16">
@@ -276,21 +258,21 @@
 
       </div>
 
-    </section>
+    </section> -->
    <!-- Contact Section End -->
 
    <!-- Footer Section Start -->
     <footer class="bg-slate-900 pt-24 pb-12">
       <div class="container mx-auto">
         <div class="flex flex-wrap">
-          <div class="w-full px-4 mb-12 text-slate-300 font-medium md:w-1/3 mx-auto">
-            <h2 class="font-bold text-4xl text-white mb-5">Zaid bin Tsabit</h2>
-            <h3 class="font-bold text-2xl mb-2">Hubungi Kami</h3>
+          <div class="w-full px-4 mb-12 text-slate-300 font-medium md:w-1/2 mx-auto">
+            <!-- <h2 class="font-bold text-4xl text-white mb-5">Kontak</h2> -->
+            <h3 class="font-bold text-4xl mb-2">Hubungi Saya</h3>
             <p>mohghazyaa@gmail.com</p>
-            <p>Surabaya</p>
+            <p>Sidoarjo</p>
             <p>Jawa Timur</p>
           </div>
-          <div class="w-full px-4 mb-12 md:w-1/3">
+          <!-- <div class="w-full px-4 mb-12 md:w-1/3">
             <h3 class="font-semibold text-xl text-white mb-5">Kategori Tulisan</h3>
             <ul class="text-slate-300 text-base">
               <li>
@@ -303,7 +285,7 @@
                 <a href="#" class="inline-block hover:text-teal-500 transition duration-300 mb-3">Gaya Hidup</a>
               </li>
             </ul>
-          </div>
+          </div> -->
           <div class="w-full px-4 mb-12 md:w-1/3">
             <h3 class="font-semibold text-xl text-white mb-5">Tautan</h3>
             <ul class="text-slate-300 text-base">
@@ -311,10 +293,10 @@
                 <a href="#" class="inline-block hover:text-teal-500 transition duration-300 mb-3">Beranda</a>
               </li>
               <li>
-                <a href="#" class="inline-block hover:text-teal-500 transition duration-300 mb-3">Tentang Saya</a>
+                <a href="#about" class="inline-block hover:text-teal-500 transition duration-300 mb-3">Tentang Saya</a>
               </li>
               <li>
-                <a href="#" class="inline-block hover:text-teal-500 transition duration-300 mb-3">Clients</a>
+                <a href="#portofolio" class="inline-block hover:text-teal-500 transition duration-300 mb-3">Portofolio</a>
               </li>
             </ul>
           </div>
