--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <link href="dist/output.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
   <link rel="icon" href="dist/image/favicon.io/favicon.ico" />
+  <link href="https://unpkg.com/aos@2.3.4/dist/aos.css" rel="stylesheet">
   <title>Portofolio</title>
 </head>
 <body class="overflow-x-hidden">
@@ -48,22 +49,24 @@
       <div class="w-full px-4 mx-auto">
         <div class="flex flex-wrap lg:flex-nowrap">
           <div class="w-full self-center px-4 lg:w-1/2 flex justify-center">
-            <div class="w-full max-w-md text-center lg:text-end">
-              <h1 class="text-2xl font-semibold text-primary md:text-3xl lg:text-4xl uppercase">
+            <div class="w-full max-w-md text-center lg:text-end" data-aos="fade-right">
+              <div class="lg:text-right  uppercase">
+                <h1 class="text-2xl font-semibold text-primary md:text-3xl">
                 i am
-                <span class="block mt-1 font-bold font-[Poppins] text-gunmetal uppercase text-4xl lg:text-6xl">Mohammad Ghazy</span>
-              </h1>
+                </h1>
+                <span id="typed-name" class="typed-cursor text-4xl inline font-bold font-[Poppins] text-gunmetal"></span>
+              </div>
               <h2 class="font-medium text-lg mb-5 mt-1 text-slate-500 lg:text-xl">
                  A Web Developer<span class="text-slate-800 font-medium"> & </span>Student
               </h2>
               <p class="font-medium text-xl text-slate-400 leading-relaxed">Aku percaya, setiap project adalah kesempatan buat berkembang. Gagal memang bisa. Tapi nyerah? <span class="font-bold text-slate-900">Tidak dulu.</span>
               </p>
-              <a target="_blank" class="text-base font-semibold text-white bg-primary hover:opacity-80 hover:shadow-lg px-40 rounded-full transition duration-300 ease-in-out">
+              <a target="_blank" class="text-base font-semibold text-white bg-primary hover:opacity-80 hover:shadow-lg px-20 rounded-full transition duration-300 ease-in-out">
               </a>
             </div>
           </div>
           <div class="w-full self-end px-4 lg:w-1/2">
-            <div class="relative mt-10 lg:mt-0 lg:right-0 flex justify-center">
+            <div class="relative mt-10 lg:mt-0 lg:right-0 flex justify-center data-aos="fade-left">
               <img src="dist/image/ghazy.png" height="400" width="250" alt="Ghazy" srcset="" class="w-72 mx-auto">
               <span class="absolute -bottom-20 -z-10 left-1/2 -translate-x-1/2 md:scale-100">
                 <svg height="400" width="350" viewBox="0 0 200 200" xmlns="http://www.w3.org/2000/svg">
@@ -82,7 +85,7 @@
       <div class="w-full px-4 mx-auto">
         <h4 class="font-bold text-3xl px-4 uppercase text-primary mb-3 md:text-center lg:text-4xl lg:mb-9">Tentang Saya</h4>
         <div class="flex flex-wrap">
-          <div class="w-full px-4 mb-8 mx-auto md:w-1/2 lg:pl-20 md:text-right xl:text-right">
+          <div class="w-full px-4 mb-8 mx-auto md:w-1/2 lg:pl-20 md:text-right xl:text-right" data-aos="fade-up">
             <h2 class="font-bold text-3xl text-slate-900 mb-4">Riwayat Pendidikan</h2>
             <!-- <p class="font-medium text-slate-500 max-w-xl text-base">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, quidem. Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita, soluta.</p> -->
             <ul class="font-medium text-slate-500 max-w-xl text-base">
@@ -92,7 +95,7 @@
               <li class="py-2">Universitas Nurul Jadid, Probolinggo (2024 - Sekarang)</li>
             </ul>
           </div>
-          <div class="w-full px-4 md:w-1/2 lg:pr-20 text-base">
+          <div class="w-full px-4 md:w-1/2 lg:pr-20 text-base" data-aos="fade-up" data-aos-delay="200">
             <h2 class="font-bold text-3xl text-slate-900 mb-4">Basic Skills</h2>
             <p class="font-medium text-base pt-2 mb-1 text-slate-500 uppercase">html
             </p>
@@ -132,14 +135,14 @@
     <section id="portofolio" class="pt-32 pb-32">
       <div class="container mx-auto">
         <div class="w-full px-4">
-          <div class="max-w-xl mx-auto text-center mb-16">
+          <div class="max-w-xl mx-auto text-center mb-16" data-aos="zoom-in">
             <h4 class="font-semibold mb-2 text-2xl text-primary lg:text-4xl">Portofolio</h4>
             <h2 class="font-bold text-slate-900 text-3xl mb-4 sm:text-4xl  lg:text-5xl">Project terbaru</h2>
             <!-- <p class="font-medium text-md text-slate-500 md:text-lg">Project lintas dunia</p> -->
           </div>
         </div>
         <div class="w-full px-4 flex flex-wrap justify-center xl:w-10/12 xl:mx-auto">
-          <div class="w-full px-4 md:w-1/2">
+          <div class="w-full px-4 md:w-1/2" data-aos="fade-up" data-aos-delay="300">
             <div class="rounded-md shadow-md overflow-hidden">
               <img src="dist/image/portfolio/blog-frecationer.png" alt="Blog Frecationer" class="w-full">
             </div>
@@ -323,5 +326,7 @@
    <!-- Footer Section End -->
 
   <script src="dist/js/script.js"></script>
+  <script src="https://unpkg.com/aos@2.3.4/dist/aos.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
 </body>
 </html>
