--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link rel="icon" href="./dist/image/favicon.io/favicon.ico" />
   <link href="https://unpkg.com/aos@2.3.4/dist/aos.css" rel="stylesheet">
 
-  <title>Portofolio Ghazy</title>
+  <title>Portofolio</title>
 </head>
 
 <body class="overflow-x-hidden bg-[#05070d] text-slate-200">
