--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       <nav class="hidden lg:flex gap-10 text-sm lg:text-base">
         <a href="#home" class="hover:text-primary transition">Beranda</a>
         <a href="#about" class="hover:text-primary transition">Tentang</a>
-        <a href="#portofolio" class="hover:text-primary transition">Portofolio</a>
+        <a href="/projects.html/" class="hover:text-primary transition">Projects</a>
       </nav>
 
       <!-- BURGER BUTTON -->
@@ -69,8 +69,10 @@
 <section id="home" class="pt-28 md:pt-36 lg:pt-40 pb-20 md:pb-28 lg:pb-36 relative overflow-hidden isolate">
 
   <!-- glow background -->
-  <div class="absolute inset-0 z-0 bg-[radial-gradient(circle_at_20%_20%,rgba(163,213,224,0.15),transparent_40%)]"></div>
-  <div class="absolute inset-0 z-0 bg-[radial-gradient(circle_at_80%_70%,rgba(120,200,255,0.1),transparent_40%)]"></div>
+  <div id="glow1" class="absolute inset-0 z-0 bg-[radial-gradient(circle_at_20%_20%,rgba(163,213,224,0.15),transparent_40%)]"></div>
+
+  <div id="glow2" class="absolute inset-0 z-0 bg-[radial-gradient(circle_at_80%_70%,rgba(120,200,255,0.1),transparent_40%)]"></div>
+
 
   <!-- grid -->
   <div class="absolute inset-0 z-0 opacity-[0.06]
@@ -126,7 +128,7 @@
         blur-[110px] opacity-80"></div>
 
         <img src="./dist/image/ghazy.png"
-        class="w-44 sm:w-52 md:w-60 lg:w-72
+        class="floating-avatar w-44 sm:w-52 md:w-60 lg:w-72
         relative z-10 rounded-2xl
         brightness-75 contrast-125 saturate-95
         drop-shadow-[0_10px_40px_rgba(0,0,0,0.7)]">
@@ -147,7 +149,7 @@
 
     <div class="grid lg:grid-cols-2 gap-10 md:gap-14 lg:gap-16">
 
-      <div data-aos="fade-up">
+      <div data-aos="fade-right">
         <h2 class="text-2xl sm:text-3xl md:text-4xl font-bold mb-4 md:mb-6 text-white">
           Tentang Saya
         </h2>
@@ -157,7 +159,7 @@
         </p>
       </div>
 
-      <div data-aos="fade-up" data-aos-delay="200">
+      <div data-aos="fade-left" data-aos-delay="200">
         <h2 class="text-2xl sm:text-3xl md:text-4xl font-bold mb-4 md:mb-6 text-white">
           Tech Stack
         </h2>
@@ -178,21 +180,20 @@
 
 
 <!-- PORTFOLIO -->
-<section id="portofolio" class="py-20 md:py-28 lg:py-36">
+<section id="portofolio" class="py-20 md:py-28 lg:py-36 mb-10">
 
   <div class="container mx-auto px-5 sm:px-6 lg:px-8">
 
-    <div class="text-center mb-14 md:mb-16 lg:mb-20">
-      <h4 class="text-primary text-lg sm:text-xl md:text-2xl font-semibold">Portofolio</h4>
-      <h2 class="text-3xl sm:text-4xl md:text-5xl font-bold text-white mt-3">
+    <div class="text-center mb-14 md:mb-16 lg:mb-20" data-aos="fade-down">
+      <h2 class="reveal-text text-3xl sm:text-4xl md:text-5xl font-bold text-white mt-3">
         Project Terbaru
       </h2>
     </div>
 
-    <div class="grid sm:grid-cols-2 lg:grid-cols-3 gap-6 md:gap-8 lg:gap-10">
+    <div class="grid sm:grid-cols-2 lg:grid-cols-3 gap-6 md:gap-8 lg:gap-10" data-aos="fade-down">
 
       <!-- Blog Frecationer -->
-      <div class="portfolio-card">
+      <div class="portfolio-card magnetic">
 
         <div class="relative overflow-hidden">
           <img src="./dist/image/portfolio/blog-frecationer.png"
@@ -208,7 +209,7 @@
             Blog Frecationer
           </h3>
 
-          <p class="text-sm md:text-base text-slate-400 mt-2">
+          <p class="portfolio-desc text-sm md:text-base text-slate-400 mt-2">
             Tampilan blog responsif yang dikembangkan menggunakan Tailwind CSS, menekankan pada layout yang bersih, komponen reusable, dan desain modern. Proyek ini menampilkan navigasi adaptif, kartu artikel, serta struktur desain yang mudah dikembangkan untuk website konten.
           </p>
 
@@ -226,13 +227,22 @@
               Responsive Design
             </span>
 
+            <a href="./projects/blog-frecationer.html"
+              class="mt-6 inline-block w-full text-center
+              py-2.5 rounded-lg
+              bg-white/5 border border-white/10
+              text-sm text-primary
+              hover:bg-white/10 transition">
+              Lihat detail proyek →
+            </a>
+
           </div>
 
         </div>
       </div>
 
 
-      <div class="portfolio-card">
+      <div class="portfolio-card magnetic">
 
         <div class="relative overflow-hidden">
           <img src="./dist/image/portfolio/spend-guard.png"
@@ -248,7 +258,7 @@
             SpendGuard – Finance Tracker
           </h3>
 
-          <p class="text-sm md:text-base text-slate-400 mt-2">
+          <p class="portfolio-desc text-sm md:text-base text-slate-400 mt-2">
             Aplikasi web pengelola keuangan pribadi yang dikembangkan dengan Django dan Tailwind, memungkinkan pengguna memantau pemasukan, pengeluaran, saldo dompet, serta mendapatkan insight keuangan melalui grafik interaktif dan tampilan dashboard yang modern.
           </p>
 
@@ -270,12 +280,30 @@
               PostgreSQL
             </span>
 
+            <a href="./projects/spendguard.html"
+              class="mt-6 inline-block w-full text-center
+              py-2.5 rounded-lg
+              bg-white/5 border border-white/10
+              text-sm text-primary
+              hover:bg-white/10 transition">
+              Lihat detail proyek →
+            </a>
+
           </div>
 
         </div>
       </div>
 
 
+    </div>
+
+    <div class="text-center mt-12" data-aos="fade-down">
+      <a href="./projects.html"
+        class="inline-block px-6 py-3 rounded-full
+        bg-white/5 border border-white/10
+        text-sm text-primary hover:bg-white/10 transition">
+        Lihat Semua Proyek →
+      </a>
     </div>
 
   </div>
@@ -377,6 +405,38 @@ new Typed("#typed-name", {
   backSpeed: 40,
   loop: true
 });
+
+/* ===== HERO PARALLAX GLOW ===== */
+const glow1 = document.getElementById("glow1");
+const glow2 = document.getElementById("glow2");
+
+document.addEventListener("mousemove",(e)=>{
+  const x = e.clientX / window.innerWidth;
+  const y = e.clientY / window.innerHeight;
+
+  if(glow1){
+    glow1.style.transform = `translate(${x*30}px, ${y*30}px)`;
+  }
+  if(glow2){
+    glow2.style.transform = `translate(-${x*30}px, -${y*30}px)`;
+  }
+});
+
+/* ===== MAGNETIC CARD EFFECT ===== */
+document.querySelectorAll(".magnetic").forEach(card=>{
+  card.addEventListener("mousemove",(e)=>{
+    const rect = card.getBoundingClientRect();
+    const x = e.clientX - rect.left - rect.width/2;
+    const y = e.clientY - rect.top - rect.height/2;
+
+    card.style.transform = `translate(${x*0.04}px, ${y*0.04}px) scale(1.02)`;
+  });
+
+  card.addEventListener("mouseleave",()=>{
+    card.style.transform = "translate(0,0) scale(1)";
+  });
+});
+
 </script>
 
 </body>
