--- a/projects/blog-frecationer.html
+++ b/projects/blog-frecationer.html
@@ -111,7 +111,7 @@
 
     <a href="../projects.html"
        class="text-sm border border-white/10 px-4 py-2 rounded-full hover:bg-white/5 transition">
-       ← Kembali
+       Kembali
     </a>
 
   </div>
@@ -246,20 +246,6 @@
 
   </div>
 </section>
-
-
-<!-- ================= LINK ================= -->
-<section class="pb-24 text-center">
-
-  <a href="https://frecationer.com"
-     target="_blank"
-     class="btn-premium inline-block px-6 py-3 bg-primary text-black
-     rounded-full font-semibold mr-3 hover:scale-105 transition">
-     Kunjungi Website
-  </a>
-
-</section>
-
 
 <script>
 /* ===== CURSOR GLOW ===== */
