--- a/projects.html
+++ b/projects.html
@@ -13,26 +13,25 @@
 
 <body class="bg-[#05070d] text-slate-200 overflow-x-hidden">
 
-
 <!-- ================= NAVBAR ================= -->
 <header class="border-b border-white/10 bg-black/30 backdrop-blur sticky top-0 z-50">
-  <div class="container mx-auto px-6 py-4 flex justify-between items-center">
-    <a href="./index.html" class="font-bold text-primary tracking-widest">
+  <div class="container mx-auto px-4 sm:px-6 py-4 flex justify-between items-center">
+    <a href="./index.html" class="font-bold text-primary tracking-widest text-lg">
       Ghazy
     </a>
 
     <a href="./index.html"
-       class="text-sm border px-4 py-2 rounded-full border-white/10 hover:bg-white/5 transition">
-      ← Kembali
+       class="text-xs sm:text-sm border px-3 sm:px-4 py-2 rounded-full border-white/10 hover:bg-white/5 transition">
+      Kembali
     </a>
   </div>
 </header>
 
 
 <!-- ================= HERO ================= -->
-<section class="py-24 text-center relative overflow-hidden">
+<section class="py-16 sm:py-20 md:py-24 text-center relative overflow-hidden">
 
-  <!-- glow cinematic -->
+  <!-- glow -->
   <div class="absolute inset-0
   bg-[radial-gradient(circle_at_20%_20%,rgba(163,213,224,0.18),transparent_45%)]"></div>
 
@@ -45,14 +44,14 @@
   linear-gradient(90deg,rgba(255,255,255,0.1)_1px,transparent_1px)]
   bg-[size:70px_70px]"></div>
 
-  <div class="relative z-10 max-w-2xl mx-auto">
+  <div class="relative z-10 max-w-2xl mx-auto px-4 sm:px-6">
 
-    <h1 class="text-4xl md:text-6xl font-bold text-white tracking-tight"
+    <h1 class="text-3xl sm:text-4xl md:text-5xl lg:text-6xl font-bold text-white tracking-tight"
         data-aos="fade-up">
       All Projects
     </h1>
 
-    <p class="text-slate-400 mt-5 text-sm md:text-base leading-relaxed"
+    <p class="text-slate-400 mt-4 sm:mt-5 text-sm sm:text-base leading-relaxed"
        data-aos="fade-up" data-aos-delay="150">
       Koleksi proyek yang saya bangun dari kebutuhan nyata,
       eksperimen pribadi, serta kontribusi kolaboratif.
@@ -65,28 +64,30 @@
 
 
 <!-- ================= DIVIDER ================= -->
-<div class="h-px w-full bg-gradient-to-r from-transparent via-white/10 to-transparent mb-16"></div>
+<div class="h-px w-full bg-gradient-to-r from-transparent via-white/10 to-transparent mb-10 sm:mb-14 md:mb-16"></div>
 
 
 <!-- ================= GRID PROJECT ================= -->
-<section class="pb-28">
-  <div class="container mx-auto px-6">
+<section class="pb-20 sm:pb-24 md:pb-28">
+  <div class="container mx-auto px-4 sm:px-6">
 
-    <div class="grid sm:grid-cols-2 lg:grid-cols-3 gap-10">
-
+    <div class="grid gap-6 sm:gap-8 md:gap-10
+                sm:grid-cols-2
+                lg:grid-cols-3">
 
 
       <!-- ================= SPENDGUARD ================= -->
-      <a href="/projects/spenguard.html"
+      <a href="/projects/spendguard.html"
          class="group block relative overflow-hidden rounded-2xl
          bg-white/5 border border-white/10 backdrop-blur-xl
-         transition duration-500 hover:-translate-y-3
+         transition duration-500 hover:-translate-y-2 sm:hover:-translate-y-3
          hover:shadow-[0_0_50px_rgba(163,213,224,0.25)]
          flex flex-col"
          data-aos="fade-up">
 
         <!-- IMAGE -->
-        <div class="relative overflow-hidden h-56">
+        <div class="relative overflow-hidden
+                    h-48 sm:h-52 md:h-56">
 
           <img src="./dist/image/portfolio/spend-guard.png"
                class="w-full h-full object-cover
@@ -95,14 +96,11 @@
           <div class="absolute inset-0 bg-gradient-to-t from-black/80 via-black/30 to-transparent"></div>
 
           <!-- CATEGORY -->
-          <span class="absolute top-4 left-4
-          text-[11px] tracking-wide font-medium
-          px-3.5 py-1.5 rounded-full
+          <span class="absolute top-3 left-3 sm:top-4 sm:left-4
+          text-[10px] sm:text-[11px] tracking-wide font-medium
+          px-3 py-1.5 rounded-full
           bg-gradient-to-r from-black/80 to-black/60
-          text-white
-          border border-white/30
-          shadow-[0_0_15px_rgba(0,0,0,0.5)]
-          backdrop-blur-md">
+          text-white border border-white/30 shadow-lg backdrop-blur-md">
             Personal Project
           </span>
 
@@ -110,7 +108,8 @@
           <div class="absolute inset-0 flex items-center justify-center opacity-0
                       group-hover:opacity-100 transition duration-500">
 
-            <span class="px-6 py-2 rounded-full
+            <span class="px-5 py-2 rounded-full
+                         text-xs sm:text-sm
                          bg-white/10 backdrop-blur border border-white/20">
               Lihat Detail →
             </span>
@@ -120,13 +119,13 @@
         </div>
 
         <!-- CONTENT -->
-        <div class="p-6 flex flex-col flex-grow">
+        <div class="p-5 sm:p-6 flex flex-col flex-grow">
 
-          <h3 class="font-semibold text-white text-xl">
+          <h3 class="font-semibold text-white text-lg sm:text-xl">
             SpendGuard
           </h3>
 
-          <p class="text-sm text-slate-400 mt-3 leading-relaxed flex-grow">
+          <p class="text-xs sm:text-sm text-slate-400 mt-3 leading-relaxed flex-grow">
             Aplikasi manajemen keuangan pribadi yang berawal dari kebutuhan saya
             sendiri untuk memahami pola pemasukan dan pengeluaran,
             lalu dikembangkan menjadi dashboard finansial yang terstruktur.
@@ -137,18 +136,18 @@
       </a>
 
 
-
       <!-- ================= FRECATIONER ================= -->
       <a href="./projects/blog-frecationer.html"
          class="group block relative overflow-hidden rounded-2xl
          bg-white/5 border border-white/10 backdrop-blur-xl
-         transition duration-500 hover:-translate-y-3
+         transition duration-500 hover:-translate-y-2 sm:hover:-translate-y-3
          hover:shadow-[0_0_50px_rgba(163,213,224,0.25)]
          flex flex-col"
          data-aos="fade-up" data-aos-delay="150">
 
         <!-- IMAGE -->
-        <div class="relative overflow-hidden h-56">
+        <div class="relative overflow-hidden
+                    h-48 sm:h-52 md:h-56">
 
           <img src="./dist/image/portfolio/blog-frecationer.png"
                class="w-full h-full object-cover
@@ -157,14 +156,11 @@
           <div class="absolute inset-0 bg-gradient-to-t from-black/80 via-black/30 to-transparent"></div>
 
           <!-- CATEGORY -->
-          <span class="absolute top-4 left-4
-           text-[11px] tracking-wide font-medium
-           px-3.5 py-1.5 rounded-full
+          <span class="absolute top-3 left-3 sm:top-4 sm:left-4
+           text-[10px] sm:text-[11px] tracking-wide font-medium
+           px-3 py-1.5 rounded-full
            bg-gradient-to-r from-black/80 to-black/60
-           text-white
-           border border-white/30
-           shadow-[0_0_15px_rgba(0,0,0,0.5)]
-           backdrop-blur-md">
+           text-white border border-white/30 shadow-lg backdrop-blur-md">
              Community Project
            </span>
 
@@ -172,7 +168,8 @@
           <div class="absolute inset-0 flex items-center justify-center opacity-0
                       group-hover:opacity-100 transition duration-500">
 
-            <span class="px-6 py-2 rounded-full
+            <span class="px-5 py-2 rounded-full
+                         text-xs sm:text-sm
                          bg-white/10 backdrop-blur border border-white/20">
               Lihat Detail →
             </span>
@@ -182,13 +179,13 @@
         </div>
 
         <!-- CONTENT -->
-        <div class="p-6 flex flex-col flex-grow">
+        <div class="p-5 sm:p-6 flex flex-col flex-grow">
 
-          <h3 class="font-semibold text-white text-xl">
+          <h3 class="font-semibold text-white text-lg sm:text-xl">
             Blog Frecationer
           </h3>
 
-          <p class="text-sm text-slate-400 mt-3 leading-relaxed flex-grow">
+          <p class="text-xs sm:text-sm text-slate-400 mt-3 leading-relaxed flex-grow">
             Website blog komunitas di mana saya berperan dalam pengembangan
             frontend. Fokus utama pada layout responsif, komponen reusable,
             serta struktur UI yang scalable untuk website berbasis konten.
@@ -198,27 +195,25 @@
 
       </a>
 
-
     </div>
 
 
-
     <!-- ================= CTA BAWAH ================= -->
-    <div class="text-center mt-20" data-aos="fade-up">
+    <div class="text-center mt-12 sm:mt-16 md:mt-20" data-aos="fade-up">
 
-      <p class="text-slate-400 mb-6">
+      <p class="text-slate-400 mb-5 sm:mb-6 text-sm sm:text-base">
         Proyek lain akan terus ditambahkan seiring waktu.
       </p>
 
       <a href="./index.html"
-         class="inline-block px-8 py-3 rounded-full
+         class="inline-block px-6 sm:px-8 py-3 rounded-full
+         text-sm sm:text-base
          bg-white/5 border border-white/10
          hover:bg-white/10 transition">
          Kembali ke Beranda
       </a>
 
     </div>
-
 
   </div>
 </section>
