--- a/projects/spendguard.html
+++ b/projects/spendguard.html
@@ -111,7 +111,7 @@
 
     <a href="../projects.html"
        class="text-sm border border-white/10 px-4 py-2 rounded-full hover:bg-white/5 transition">
-       ← Kembali
+       Kembali
     </a>
 
   </div>
@@ -253,26 +253,6 @@
 
   </div>
 </section>
-
-
-<!-- ================= LINK ================= -->
-<section class="pb-24 text-center">
-
-  <a href="https://github.com/MohGhazy"
-     target="_blank"
-     class="btn-premium inline-block px-6 py-3 bg-primary text-black
-     rounded-full font-semibold mr-3 hover:scale-105 transition">
-     Lihat di GitHub
-  </a>
-
-  <a href="#"
-     class="inline-block px-6 py-3 border border-white/20
-     rounded-full hover:bg-white/5 transition">
-     Live Demo
-  </a>
-
-</section>
-
 
 <script>
 /* ===== CURSOR GLOW ===== */
