--- a/projects.html
+++ b/projects.html
@@ -77,7 +77,7 @@
 
 
       <!-- ================= SPENDGUARD ================= -->
-      <a href="./projects/spendguard.html"
+      <a href="portfolio/projects/spendguard.html"
          class="group block relative overflow-hidden rounded-2xl
          bg-white/5 border border-white/10 backdrop-blur-xl
          transition duration-500 hover:-translate-y-2 sm:hover:-translate-y-3
