--- a/index.html
+++ b/index.html
@@ -390,7 +390,7 @@
               <span class="tech-badge">PostgreSQL</span>
             </div>
 
-            <a href="portfolio/projects/spendguard.html"
+            <a href="./projects/spendguard.html"
             class="mt-6 inline-block w-full text-center py-2.5 rounded-lg
             bg-white/5 border border-white/10 text-sm text-primary hover:bg-white/10 transition">
             Lihat detail proyek
