--- a/projects.html
+++ b/projects.html
@@ -74,7 +74,7 @@
 
       <!-- ================= FRECATIONER ================= -->
       <a href="./projects/blog-frecationer.html"
-         class="group block relative overflow-hidden rounded-2xl bg-white/5 border border-white/10 backdrop-blur-xl transition duration-500 hover:-translate-y-2 sm:hover:-translate-y-3 hover:shadow-[0_0_50px_rgba(163,213,224,0.25)] flex flex-col"
+         class="group relative overflow-hidden rounded-2xl bg-white/5 border border-white/10 backdrop-blur-xl transition duration-500 hover:-translate-y-2 sm:hover:-translate-y-3 hover:shadow-[0_0_50px_rgba(163,213,224,0.25)] flex flex-col"
          data-aos="fade-up" data-aos-delay="150">
 
         <div class="relative overflow-hidden h-48 sm:h-52 md:h-56">
@@ -111,7 +111,7 @@
 
       <!-- ================= SPENDGUARD ================= -->
       <a href="./projects/spendguard.html"
-         class="group block relative overflow-hidden rounded-2xl bg-white/5 border border-white/10 backdrop-blur-xl transition duration-500 hover:-translate-y-2 sm:hover:-translate-y-3 hover:shadow-[0_0_50px_rgba(163,213,224,0.25)] flex flex-col"
+         class="group relative overflow-hidden rounded-2xl bg-white/5 border border-white/10 backdrop-blur-xl transition duration-500 hover:-translate-y-2 sm:hover:-translate-y-3 hover:shadow-[0_0_50px_rgba(163,213,224,0.25)] flex flex-col"
          data-aos="fade-up">
 
         <div class="relative overflow-hidden h-48 sm:h-52 md:h-56">
