--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@
               bg-white/5 border border-white/10
               hover:bg-white/10 transition">
 
-              <img src="/dist/image/icons/github.png"
+              <img src="dist/image/icons/github.png"
                   alt="GitHub"
                   class="w-5 h-5 object-contain invert brightness-110">
             </a>
